--- a/client/src/views/AdminPage/AdminPage.module.css
+++ b/client/src/views/AdminPage/AdminPage.module.css
@@ -1,3 +1,8 @@
 .principalContainer {
     display: flex;
 }
+.columnContainer {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
