--- a/client/src/views/AdminPage/components/CustomModal/CustomModal.module.css
+++ b/client/src/views/AdminPage/components/CustomModal/CustomModal.module.css
@@ -1,6 +1,7 @@
 .dialogContainer {
   border: none;
   border-radius: 5px;
+  height: 80%;
   width: 70%;
   padding-bottom: 40px;
 }
@@ -27,18 +28,16 @@
   flex-direction: column;
   align-items: center;
 }
-
-.customInput {
-  border: none;
-  background-color: whitesmoke;
-  width: 180px;
-  margin-top: 10px;
-  padding: 10px;
+.contentDialog label {
+  font-size: 12px;
   font-family: sans-serif;
-  border-radius: 5px;
+  color: red;
+  text-align: start;
 }
-.customInput:focus {
-  outline: 1px solid #fe4f22;
+
+.textAreaContainer {
+  width: 200px;
+  text-align: start;
 }
 
 .customTextArea {
@@ -57,6 +56,22 @@
   outline: 1px solid #fe4f22;
 }
 
+.customSelectTag {
+  background-color: whitesmoke;
+  border: none;
+  width: 200px;
+  margin-top: 10px;
+  padding: 10px;
+  border-radius: 5px;
+  color: black;
+}
+.customSelectTag:focus {
+  outline: 1px solid #fe4f22;
+}
+.customSelectTag option {
+  font-family: sans-serif;
+  color: grey;
+}
 .createBtn {
   border: none;
   border-radius: 5px;
@@ -72,4 +87,26 @@
 }
 .createBtn:focus {
   outline: none;
+}
+
+.selectedItemsContainer {
+  margin-top: 10px;
+  width: 100%;
+  height: 80px;
+  overflow: scroll;
+  overflow-x: hidden;
+}
+.selectedItemsContainer li {
+  list-style: square;
+  color: #fe4f22;
+}
+
+.selectTagsContainer {
+  text-align: start;
+  width: 200px;
+}
+.selectTagsContainer label {
+  color: red;
+  font-family: sans-serif;
+  font-size: 12px;
 }
