--- a/client/src/components/AboutHome/AboutHome.module.css
+++ b/client/src/components/AboutHome/AboutHome.module.css
@@ -9,6 +9,9 @@
     color: #adadad;
 }
 .aboutPageHero{
+    background-image: url(../../assets/OIP.jpg);
+    background-size: cover;
+    background-position: center;
     height: 100%;
     width:100%;
     object-fit: cover;
