--- a/client/src/components/Clases/clases.module.css
+++ b/client/src/components/Clases/clases.module.css
@@ -3,14 +3,34 @@
 .container{
     width: 100vw;
     height: 100vh;
-    background-color: #000000;
     display: grid;
-    grid-template-areas: left-sidebar activities;
-    grid-template-columns: 33vw 1fr;
     background-image: url("../../assets/clases_background.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     opacity: 0.7;
+    grid-template-areas: "leftInfo activities";
+    grid-template-columns: 33vw 1fr;
+   
+}
+
+
+.info {
+    grid-area: leftInfo;
+    background-color: #000000b9;
+    height: 85vh;
+    margin: 5rem;
+
+
+}
+
+.clases {
+    grid-area: activities;
+    background-color: #ff670280;
+    height: 85vh;
+    margin: 5rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-template-rows: repeat(auto-fill, minmax(450px, 1fr));
    
 }
