--- a/client/src/components/Clases/clases.module.css
+++ b/client/src/components/Clases/clases.module.css
@@ -18,9 +18,66 @@
 .info {
     grid-area: leftInfo;
     background-color: #000000b9;
+    border-radius: 15px;
     height: 85vh;
     margin: 5rem;
+    display: grid;
+    grid-template-areas: "sup  "
+                         " inf ";
+    grid-template-rows: 1fr 10vh;
 
+
+}
+
+.info p {
+    opacity: 1;
+    font-size: 10rem;
+    color: white;
+    position: absolute;
+    top: -8rem;
+}
+
+.info p:nth-child(2) {
+    font-size: 3rem;
+    top: 10rem;
+    left: 7rem;
+}
+.info p:nth-child(3) {
+    font-size: 2rem;
+    color: #ff5e00;
+    top: 15rem;
+    left: 7rem;
+}
+
+.donWait{
+    grid-area: inf;
+    background-color:rgb(255, 255, 255);
+    height: 100%;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    vertical-align: middle;
+    line-height: 100px;
+    font-size: 2.5rem;
+    color: #ff0000;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+  
+}
+
+button{
+    font-size: 20px;
+    background-color: #ff5e00;
+    color: #ffffff;
+    margin-top: 200px;
+    align-self: center;
+    justify-self: center;
+    height: 100px;
+    width: 400px;
+    border-radius: 15px;
+}
+button:hover{
+    background-color: #ff0000;
 
 }
 
