--- a/client/src/views/AdminPage/components/AdminCardView/AdminCardView.module.css
+++ b/client/src/views/AdminPage/components/AdminCardView/AdminCardView.module.css
@@ -36,8 +36,8 @@
 
 .cardLayout {
   margin-top: 20px;
-  height: 80%;
-  width: 90%;
+  height: 65vh;
+  width: 70vw;
   border-radius: 5px;
   background-color: white;
   box-shadow: 10px 10px 25px grey;
@@ -58,8 +58,9 @@
 .tableAdminView tr th {
   border: 1px solid grey;
 }
-.tableAdminView .thDescription {
+.tableAdminView .tdDescription {
   width: 480px;
+  text-align: justify;
 }
 .tableAdminView .tdDescription {
   text-align: justify;
@@ -71,6 +72,14 @@
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
   height: 40px;
+}
+.headWithFilterBtn {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.iconBtn:hover {
+  cursor: pointer;
 }
 
 .header {
@@ -95,6 +104,8 @@
   height: 30px;
   font-family: sans-serif;
   color: white;
+  text-decoration: none;
+  padding: 8px;
   width: 60px;
   border-radius: 5px;
   border: none;
@@ -104,5 +115,21 @@
   cursor: pointer;
 }
 .editBtn:focus {
+  outline: none;
+}
+.deleteBtn {
+  height: 30px;
+  padding: 8px;
+  font-family: sans-serif;
+  color: white;
+  width: 60px;
+  border-radius: 5px;
+  border: none;
+  background-color: brown;
+}
+.deleteBtn:hover {
+  cursor: pointer;
+}
+.deleteBtn:focus {
   outline: none;
 }
