Agregando iconos a los items de la side bar, users, activities y instructores

--- a/client/src/views/AdminPage/components/CustomItemSideBar/CustomItemSideBar.module.css
+++ b/client/src/views/AdminPage/components/CustomItemSideBar/CustomItemSideBar.module.css
@@ -13,8 +13,8 @@
 }
 
 .itemOfSideBar {
-  width: 60%;
-  text-align: start;
+  display: flex;
+  justify-content: flex-start;
   padding-top: 10px;
   padding-bottom: 10px;
 }
@@ -22,4 +22,5 @@
 .itemOfSideBar span {
   font-size: 18px;
   font-weight: 500;
+  padding-left: 20px;
 }
