--- a/client/src/components/Buy/buy.module.css
+++ b/client/src/components/Buy/buy.module.css
@@ -75,11 +75,13 @@
     margin-top: -3vw;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
+    color: rgb(255, 81, 0);
+    font-size: 1vw;
 }
 
 .trainer{
-    margin-right: 1vw;
+    margin-left: 1vw;
     font-size: 1vw;
     color: rgb(255, 255, 255);
 }
