--- a/client/src/components/Activity/activity.module.css
+++ b/client/src/components/Activity/activity.module.css
@@ -75,7 +75,7 @@
     font-size: 20px;
     color: rgb(255, 255, 255);
     background-color: rgb(245, 118, 0);
-    opacity: 0;
+    /* opacity: 0; */
 }
 
 
