--- a/client/src/components/Clases/clases.module.css
+++ b/client/src/components/Clases/clases.module.css
@@ -30,23 +30,23 @@
 }
 
 .info p {
+    grid-area: sup;
     opacity: 1;
-    font-size: 10rem;
+    font-size: 8vw;
     color: white;
-    position: absolute;
-    top: -8rem;
+    margin-top: -6vh;
 }
 
 .info p:nth-child(2) {
-    font-size: 3rem;
+    font-size: 3vw;
     top: 10rem;
     left: 7rem;
+    margin-top: 12vh;
 }
 .info p:nth-child(3) {
-    font-size: 2rem;
+    font-size: 1.5vw;
     color: #ff5e00;
-    top: 15rem;
-    left: 7rem;
+    margin-top: 19vh;
 }
 
 .donWait{
@@ -56,12 +56,12 @@
     display: flex;
     text-align: center;
     justify-content: center;
-    vertical-align: middle;
+    justify-self: center;
     line-height: 100px;
-    font-size: 2.5rem;
+    font-size: 2vw;
+    width: 20vw;
     color: #ff0000;
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
+    border-radius: 15px;
   
 }
 
