--- a/client/src/components/Hero/style.css
+++ b/client/src/components/Hero/style.css
@@ -3,6 +3,7 @@
     background-image: linear-gradient(to right, rgb(34, 34, 34, 0.8), rgba(34, 34, 34, 0.8)), url('./img/hero.jpg');
     background-size: cover;
     padding: 4rem 0;
+    height: 80vh;
   }
   
   
