--- a/client/src/components/Nav/style.css
+++ b/client/src/components/Nav/style.css
@@ -48,12 +48,33 @@ FONT SIZE SYSTEM (px)
     justify-content: space-between;
     align-items: center;
     background-color: #fdede9;
+    width: 92vw;
 
     /* Because header will be sticky, otherwise padding will do */
     height: 6.2rem;
     padding: 0 4.8rem;
     /* position: relative; */
 
+}
+
+.headerScrolled {
+  position: fixed;
+  display: flex;
+  
+  justify-content: space-between;
+  align-items: center;
+ 
+  width: 92vw;
+  color: #000;
+  margin-top: 20px;
+  z-index: 1;
+
+  text-decoration: none;
+  height: 6.2rem;
+  padding: 0 4.8rem;
+  background: rgba(255, 254, 254, 0.9);
+
+  
 }
 
 .logo {
