--- a/client/src/components/Buy/buy.module.css
+++ b/client/src/components/Buy/buy.module.css
@@ -7,8 +7,10 @@
     background-repeat: no-repeat;
     filter: grayscale(10%);
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    align-content: center;
 }
 
 .container{
