--- a/client/src/components/Filtrado/style.css
+++ b/client/src/components/Filtrado/style.css
@@ -1,11 +1,39 @@
 .filters{
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
-    margin-top: 20px;
+    margin-top: 0px;
 }
 
-.filter-by-day{
-margin-right: 20px;
-}
+
+.filter-by-day {
+    margin-top: 1vh;
+    border:1px solid #d9d9d9;
+    height:30px;
+    overflow: hidden;
+    width: 230px;
+    position:relative;
+ }
+ select {
+    background: #fff;
+    border: none;
+    font-size: 14px;
+    height: 30px;
+    width: 10vw;
+ }
+ select:focus{ outline: none;}
+ 
+ .caja::after{
+     content:"\025be";
+     display:table-cell;
+     padding-top:7px;
+     text-align:center;
+     width:30px;
+     height:30px;
+     background-color:#d9d9d9;
+     position:absolute;
+     top:0;
+     right:0px;	
+     pointer-events: none;
+ }
