Agregando condicion para renderizar un loader, hasta traer todas las activities. Estilizando la disposicion del loader

--- a/client/src/views/AdminPage/AdminPage.module.css
+++ b/client/src/views/AdminPage/AdminPage.module.css
@@ -1,8 +1,32 @@
 .principalContainer {
-    display: flex;
+  display: flex;
 }
 .columnContainer {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.loaderContainer {
+  height: 100%;
+}
+
+.loader {
+  width: 48px;
+  height: 48px;
+  border: 5px solid;
+  border-color: #ff3d00 transparent;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
