--- a/client/src/views/AdminPage/components/SideBar/SideBar.module.css
+++ b/client/src/views/AdminPage/components/SideBar/SideBar.module.css
@@ -20,8 +20,10 @@
   width: 70px;
   height: 70px;
   margin-bottom: 15px;
-  background-color: white;
-  box-shadow: 0px 0px 20px grey;
+}
+.gymLogo img {
+  width: 100%;
+  height: 100%;
 }
 
 .nameGym span {
