--- a/client/src/views/AdminPage/components/TopBar/TopBar.module.css
+++ b/client/src/views/AdminPage/components/TopBar/TopBar.module.css
@@ -46,8 +46,14 @@
 }
 
 .logoUser {
-  background-color: #fe4f22;
+  background-color: whitesmoke;
   border-radius: 100%;
   height: 40px;
   width: 40px;
+}
+
+.logoUser img {
+  height: 40px;
+  width: 40px;
+  object-fit: contain;
 }
