--- a/client/src/components/Activities/activities.module.css
+++ b/client/src/components/Activities/activities.module.css
@@ -2,9 +2,12 @@
     z-index: 0;
     grid-area: activities;
     display: grid;
-    margin: 8vw;
+   margin-left: 5vw;
     margin-top: 5vh;
-    grid-template-columns: repeat(auto-fill, minmax(12vw, 1fr));
+    align-content: center;
+    justify-content: space-evenly;
+  
+    grid-template-columns: repeat(auto-fill, minmax(15vw, 1fr));
     grid-template-rows: repeat(auto-fill, minmax(30vh, 1fr));
 }
 
