--- a/client/src/components/Filtrado/style.css
+++ b/client/src/components/Filtrado/style.css
@@ -14,6 +14,7 @@
     overflow: hidden;
     width: 230px;
     position:relative;
+    margin-left: 1vw;
  }
  
  .filter-by-day:focus{ outline: none;}
