modificacion de iconos

--- a/client/src/components/Nav/style.css
+++ b/client/src/components/Nav/style.css
@@ -78,7 +78,7 @@ FONT SIZE SYSTEM (px)
 .logo {
     height: 8vh;;
     width: 10vw;
-    background-image: url('../../assets/logo.png');
+    background-image: url('../../assets/PG1.png');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
