--- a/client/src/components/Buy/buy.module.css
+++ b/client/src/components/Buy/buy.module.css
@@ -6,14 +6,65 @@
     background-position: center;
     background-repeat: no-repeat;
     filter: grayscale(10%);
+    display: grid;
+    grid-template-areas:    "title     .     cart"
+                            "coachs  buy cart"
+                            ".     .      . ";
+  grid-template-rows: 1fr 40vw 1fr;
+  grid-template-columns: 30vw 30vw 35vw;
+
+}
+
+.coachs{
+    grid-area: coachs;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
+    width: 10vw;
+    height: 20vw;
+    background-color: rgba(0,0,0,0.5);
+    align-self: center;
+    justify-self: right;
+}
+
+.coachsTitle{
+    grid-area: coachs;
+    align-self: flex-start;
+    justify-self: right;
+    font-size: 2vw;
+    color: rgb(148, 141, 141);
+    margin-top: 15vh;
+    background-color:rgb(0, 0, 0);
+    border-top-left-radius: 15px;
+    width: 10vw;
+}
+
+.coachImage{
+width: 100%;
+height: 100%;
+align-items: center;
+justify-content: center;
+background-color: rgba(255, 255, 255, 0.5);
+border-radius: 50%;
+}
+
+.coach1 img{
+    width: 100%;
+    height: 100%;
+    transition: ease-in-out 0.5s;
+}
+
+/* .coach1:hover{
+    transform: translateX(-10vw);
+} */
+
+.coach2{
+width: 100%;
+height: 50%;
+background-color: rgba(255, 92, 43, 0.795);
 }
 
 .container{
+    grid-area: buy;
     border-radius: 10px;
     margin-top: 5vh;
     background-color: rgba(0,0,0,0.5);
@@ -57,7 +108,7 @@
 
 
 .name{
-    text-align: left;
+    text-align: center;
     grid-area: name;
     font-size: 2.5vw;
     color: rgb(221, 221, 221);
