corrgiendo estilos review

--- a/client/src/components/Review/Review.module.css
+++ b/client/src/components/Review/Review.module.css
@@ -1,5 +1,5 @@
 .reviewContainer{
-    background-color: #777;
+    background-color: #fdede9;
     margin-top: auto;
     display: flex;
     position: relative;
