--- a/client/src/components/Cart/cart.module.css
+++ b/client/src/components/Cart/cart.module.css
@@ -2,7 +2,6 @@
     grid-area: cart;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     width: 83%;
     height: 88%;
     padding: 0;
@@ -18,8 +17,7 @@
     color: rgb(148, 141, 141);
     background-color:rgb(0, 0, 0);
     width: 100%;
-    align-items: flex-start;
-    align-content: flex-start;
-    align-self: flex-start;
-
+    justify-content: flex-start;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
