--- a/client/src/views/LoginPage/LoginPage.module.css
+++ b/client/src/views/LoginPage/LoginPage.module.css
@@ -3,11 +3,45 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  height: 100vh;
+}
+.forgotDialog {
+  border: none;
+  width: 40vw;
+  height: 30vh;
+  border-radius: 5px;
+}
+.dialogContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+.forgotPassContainer {
+  padding-top: 20px;
+  font-size: 14px;
+  padding-bottom: 20px;
+}
+.forgotPassBtn {
+  border: none;
+  background-color: transparent;
+  color: #fe4f22;
+  font-weight: 600;
+  font-family: sans-serif;
+  font-size: 14px;
+}
+.forgotPassBtn:hover {
+  cursor: pointer;
+}
+.forgotPassBtn:focus {
+  outline: none;
 }
 
-.loginBtn {
-  background-color: white;
+.sendBtn {
+  margin-top: 20px;
+  background-color: #fe4f22;
   box-shadow: 10px 10px 20px rgb(171, 171, 171);
+  color: white;
   border: none;
   padding: 10px;
   width: 180px;
@@ -17,10 +51,49 @@
   border-radius: 5px;
   font-family: sans-serif;
 }
+.sendBtn:hover {
+  cursor: pointer;
+}
+.sendBtn:focus {
+  outline: none;
+}
+
+.createAccount {
+  padding: 10px;
+  padding: 40px;
+}
+.link {
+  font-family: sans-serif;
+  color: #fe4f22;
+  font-weight: 600;
+  text-decoration: none;
+}
+.link:hover {
+  cursor: pointer;
+}
+
+.loginBtn {
+  background-color: white;
+  box-shadow: 10px 10px 20px rgb(171, 171, 171);
+  border: none;
+  padding: 10px;
+  width: 180px;
+  margin-bottom: 10px;
+  font-size: 15px;
+  font-weight: 600;
+  border-radius: 5px;
+  font-family: sans-serif;
+}
 .loginBtn:hover {
   cursor: pointer;
 }
+.optionsToLogin {
+  color: grey;
+  font-family: sans-serif;
+  font-weight: 600;
+}
 .googleBtn {
+  margin-top: 20px;
   width: 50px;
   height: 50px;
   display: flex;
