--- a/client/src/views/SocioPage/components/MyActivities/MyActivities.module.css
+++ b/client/src/views/SocioPage/components/MyActivities/MyActivities.module.css
@@ -1,6 +1,13 @@
 .myActivitiesContainer{
     margin-top: 15rem;
     color: white;
-    font-size: 2rem;
+    font-size: 1rem;
     font-weight: 600;
+    
+}
+
+.myActivitiesDetail{
+    background-color: darkgrey;
+    height: 30vh;
+    width: 95vw;
 }
