--- a/client/src/views/AdminPage/components/CustomItemSideBar/CustomItemSideBar.module.css
+++ b/client/src/views/AdminPage/components/CustomItemSideBar/CustomItemSideBar.module.css
@@ -41,3 +41,23 @@
   font-weight: 500;
   padding-left: 20px;
 }
+
+@media screen and (max-width: 780px) {
+  .itemOfSideBar {
+    width: 80%;
+    justify-content: center;
+  }
+  .itemOfSideBar span {
+    display: none;
+  }
+  .itemSelectedOfSideBar {
+    padding-left: 0px;
+    transition: none;
+    width: 80%;
+    justify-content: center;
+    background-color: #fe4f22;
+  }
+  .itemSelectedOfSideBar span {
+    display: none;
+  }
+}
