--- a/client/src/views/AdminPage/components/SideBar/SideBar.module.css
+++ b/client/src/views/AdminPage/components/SideBar/SideBar.module.css
@@ -51,3 +51,23 @@
 .link {
   width: 100%;
 }
+
+
+@media screen and (max-width: 780px) {
+  .sideBarContainer {
+    width: 80px;
+  }
+  .gymLogo {
+    border-radius: 100%;
+    width: 50px;
+    height: 50px;
+    margin-bottom: 15px;
+  }
+  .gymLogo img {
+    width: 100%;
+    height: 100%;
+  }
+  .nameGym span {
+    font-size: 14px;
+  }
+}
