Optimizando la pagina de login y registro, agrego loader para mostrar mientras se loggea

--- a/client/src/views/LoginPage/LoginPage.module.css
+++ b/client/src/views/LoginPage/LoginPage.module.css
@@ -5,6 +5,14 @@
   align-items: center;
   height: 100vh;
 }
+
+.isLoadingCustom {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .forgotDialog {
   border: none;
   width: 40vw;
