Renderizo la CenterDynamicView, en 'contentOfCard' podrá mandar el componente a renderizar de acuerdo al item seleccionado en la sideBar

--- a/client/src/views/SocioPage/SocioPage.module.css
+++ b/client/src/views/SocioPage/SocioPage.module.css
@@ -17,6 +17,14 @@
   background-color: black;
 }
 
+.centerViewContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
 
 .principalContainer h2 {
   color: white;
