--- a/client/src/views/SocioPage/components/Recetas/Card.module.css
+++ b/client/src/views/SocioPage/components/Recetas/Card.module.css
@@ -1,30 +1,34 @@
 .div{
-    background-color: #e0c8a89a;
-    padding: 1rem;
-    overflow: hidden;
-    margin: 10px 0px;
-    width: 30%;
-    float: left;
+  display: inline-grid;
+  grid-template-rows: 25% 1fr;
+  width: 250px;
+  height: 350px;
+  border-radius: 2.5rem;
+  background-color: rgba(3, 3, 3, 0.3);
+  margin: 1rem;
+  border: 1px solid rgb(238, 98, 5);
 }
 
 .imagen{
-    height: 150px;
+    height: 100px;
     width: 50%;
-    border-radius: 10px;
+    border-radius: 15px;
+}
+.name{
+  color: bisque;
+  font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .Card {
-    float: left;
-    color: white;
-    overflow: hidden;
-    margin-left: 20px;
-    margin-top: 25px;
-    width: 32%;
-    background-color: #5250505d;
-    backdrop-filter: blur(6px);
-    border-radius: 18px;
-    box-shadow: rgba(110, 110, 117, 0.2) 0px 7px 29px 0px;
-    border: 1px solid black;
+  position: relative;
+  border: none;
+  border-radius: 30%;
+  display: block;
+  height: 130px;
+  width: 160px;
+  border: 4px solid var(--primary-color);
+  object-fit: cover;
+  margin: 1rem auto;
     
     
   }
