--- a/client/src/components/Cart/cart.module.css
+++ b/client/src/components/Cart/cart.module.css
@@ -11,9 +11,10 @@
     display: grid;
     grid-template-areas: "title"
                          "product"
+                         "productFinal"
                          "total"
                          "dispatch";
-    grid-template-rows: 6vh 1fr 5vh;
+    grid-template-rows: 6vh 1fr 1fr 5vh;
 
 }
 
@@ -31,7 +32,13 @@
 
 .cartContainer{
     grid-area: product;
+    background-color: #ff000088;
+}
 
+.cartFinal{
+    grid-area: productFinal;
+    height: 100%;
+    background-color: #00ff0083;
 }
 
 .dispatchContainer{
