--- a/client/src/components/Nav/style.css
+++ b/client/src/components/Nav/style.css
@@ -75,6 +75,7 @@ FONT SIZE SYSTEM (px)
   background: rgba(255, 254, 254, 0.9);
 }
 
+
 .logo {
     height: 8vh;;
     width: 10vw;
@@ -82,6 +83,18 @@ FONT SIZE SYSTEM (px)
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
+}
+
+
+
+.buttonCart{
+  background-image: url('../../assets/cart.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  height:7vh;
+  width: 5vw;
+  filter: drop-shadow(0px 1.5vh 1vh rgb(255, 81, 0));
 }
 
 /******************************/
@@ -213,3 +226,4 @@ FONT SIZE SYSTEM (px)
     }
   
   } 
+
