--- a/client/src/components/Nav/style.css
+++ b/client/src/components/Nav/style.css
@@ -95,6 +95,38 @@ FONT SIZE SYSTEM (px)
   height:7vh;
   width: 5vw;
   filter: drop-shadow(0px 1.5vh 1vh rgb(255, 81, 0));
+  cursor: pointer;
+}
+
+.cart-closed {
+  display: none;
+}
+
+.cart-open {
+  display: block;
+  text-align: center;
+  position: absolute;
+  top: 500px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 50%;
+  height: 90vh;
+  z-index: 9999;
+}
+
+.cart-nav {
+  position: relative;
+}
+
+.close-cart {
+  position: absolute;
+  top: 10px;
+  color: white;
+  background-color: black;
+  border:  none;
+  font-weight: 500;
+  right: 180px;
+  cursor: pointer;
 }
 
 /******************************/
@@ -158,6 +190,8 @@ FONT SIZE SYSTEM (px)
     width: 2.4rem;
     color: #333;
 } */
+
+
 
 
 @media (max-width: 62em) {
