se uodatea el carrito y se actualiza el checkout

--- a/client/src/components/Cart/cart.module.css
+++ b/client/src/components/Cart/cart.module.css
@@ -32,13 +32,13 @@
 
 .cartContainer{
     grid-area: product;
-    background-color: #ff000088;
+   /*  background-color: #ff000088; */
 }
 
 .cartFinal{
     grid-area: productFinal;
     height: 100%;
-    background-color: #00ff0083;
+    /* background-color: #00ff0083; */
 }
 
 .dispatchContainer{
