--- a/client/src/components/Nav/style.css
+++ b/client/src/components/Nav/style.css
@@ -44,57 +44,88 @@ FONT SIZE SYSTEM (px)
 /******************************/
 
 .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #fdede9;
-    width: 92vw;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fdede9;
+  width: 92vw;
 
-    /* Because header will be sticky, otherwise padding will do */
-    height: 6.2rem;
-    padding: 0 4.8rem;
-    /* position: relative; */
+  /* Because header will be sticky, otherwise padding will do */
+  height: 6.2rem;
+  padding: 0 4.8rem;
+  /* position: relative; */
 
 }
 
 .headerScrolled {
-  position: fixed;
-  display: flex;
-  
-  justify-content: space-between;
-  align-items: center;
- 
-  width: 92vw;
-  color: #000;
-  margin-top: 20px;
-  z-index: 1;
+position: fixed;
+display: flex;
 
-  text-decoration: none;
-  height: 6.2rem;
-  padding: 0 4.8rem;
-  background: rgba(255, 254, 254, 0.9);
+justify-content: space-between;
+align-items: center;
+
+width: 92vw;
+color: #000;
+margin-top: 20px;
+z-index: 1;
+
+text-decoration: none;
+height: 6.2rem;
+padding: 0 4.8rem;
+background: rgba(255, 254, 254, 0.9);
 }
 
 
 .logo {
-    height: 8vh;;
-    width: 10vw;
-    background-image: url('../../assets/PG1.png');
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
+  height: 8vh;;
+  width: 10vw;
+  background-image: url('../../assets/PG1.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 
 
 .buttonCart{
-  background-image: url('../../assets/cart.png');
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-  height:7vh;
-  width: 5vw;
-  filter: drop-shadow(0px 1.5vh 1vh rgb(255, 81, 0));
+background-image: url('../../assets/cart.png');
+background-size: contain;
+background-repeat: no-repeat;
+background-position: center;
+height:7vh;
+width: 5vw;
+filter: drop-shadow(0px 1.5vh 1vh rgb(255, 81, 0));
+cursor: pointer;
+}
+
+.cart-closed {
+display: none;
+}
+
+.cart-open {
+display: block;
+text-align: center;
+position: absolute;
+top: 12vh;
+right: -4vw;
+width: 30vw;
+height: 90vh;
+z-index: 9999;
+}
+
+.cart-nav {
+position: relative;
+}
+
+.close-cart {
+position: absolute;
+top: 10px;
+color: white;
+background-color: black;
+border:  none;
+font-weight: 500;
+right: 180px;
+cursor: pointer;
 }
 
 /******************************/
@@ -102,36 +133,36 @@ FONT SIZE SYSTEM (px)
 /******************************/
 
 .main-nav-list {
-    list-style: none;
-    display: flex;
-    gap: 4rem;
-    display: flex;
-    align-items: center;
+  list-style: none;
+  display: flex;
+  gap: 4rem;
+  display: flex;
+  align-items: center;
 }
 
 .main-nav-link:link, .main-nav-link:visited {
-    text-decoration: none;
-    color: #333;
-    font-weight: 500;
-    font-size: 1.2rem;
-    transition: all 0.3s;
+  text-decoration: none;
+  color: #333;
+  font-weight: 500;
+  font-size: 1.2rem;
+  transition: all 0.3s;
 }
 
 .main-nav-link:hover, .main-nav-link:active {
-    color: #eb4e27;
+  color: #eb4e27;
 }
 
 .main-nav-link.nav-cta:link, .main-nav-link.nav-cta:visited {
-    display: inline-block;
-    background-color: #eb4e27;
-    color: #fff;
-    padding: 0.8rem 1.6rem;
-    border-radius: 9px;
-    text-decoration: none;
+  display: inline-block;
+  background-color: #eb4e27;
+  color: #fff;
+  padding: 0.8rem 1.6rem;
+  border-radius: 9px;
+  text-decoration: none;
 }
 
 .main-nav-link.nav-cta:hover, .main-nav-link.nav-cta:active {
-    background-color: #d44623;
+  background-color: #d44623;
 }
 
 /******************************/
@@ -139,91 +170,92 @@ FONT SIZE SYSTEM (px)
 /******************************/
 
 .btn-mobile-nav {
-    border: none;
-    background: none;
-    cursor: pointer;
-    display: none;
+  border: none;
+  background: none;
+  cursor: pointer;
+  display: none;
 }
 
 /* .icon-mobile-menu {
-    display: none;
-    height: 2.4rem;
-    width: 2.4rem;
-    color: #333;
+  display: none;
+  height: 2.4rem;
+  width: 2.4rem;
+  color: #333;
 }
 
 .icon-mobile-close {
-    display: none;
-    height: 2.4rem;
-    width: 2.4rem;
-    color: #333;
+  display: none;
+  height: 2.4rem;
+  width: 2.4rem;
+  color: #333;
 } */
 
 
+
+
 @media (max-width: 62em) {
-    .btn-mobile-nav {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      z-index: 9999;
-      color: #333;
-    }
-  
-    .icon-mobile-close {
-      color: #333;
-    }
-  
-    .main-nav {
-      background-color: rgba(253, 237, 233, 0.98);
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      transition: all 0.5s ease-in;
-      /* margin-top: 4.8rem; */
-      padding-top: 4.8rem;
-      padding-bottom: 4.8rem;
-  
-      /* Hide Nav from user, cursor and screen readers */
-      opacity: 0;
-      pointer-events: none;
-      visibility: hidden;
-  
-      transform: translateX(100%);
-    }
-  
-    .nav-open .main-nav {
-      opacity: 1;
-      pointer-events: auto;
-      visibility: visible;
-      transform: translateX(0);
-    }
+  .btn-mobile-nav {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 9999;
+    color: #333;
+  }
 
-    .icon-mobile-menu {
-        display: block;
-        z-index: 1000;
-    }
-  
-    .icon-mobile-close {
-      display: none;
-    }
-  
-    .nav-open .icon-mobile-close {
+  .icon-mobile-close {
+    color: #333;
+  }
+
+  .main-nav {
+    background-color: rgba(253, 237, 233, 0.98);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.5s ease-in;
+    /* margin-top: 4.8rem; */
+    padding-top: 4.8rem;
+    padding-bottom: 4.8rem;
+
+    /* Hide Nav from user, cursor and screen readers */
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
+
+    transform: translateX(100%);
+  }
+
+  .nav-open .main-nav {
+    opacity: 1;
+    pointer-events: auto;
+    visibility: visible;
+    transform: translateX(0);
+  }
+
+  .icon-mobile-menu {
       display: block;
-    }
-  
-    .nav-open .icon-mobile-menu {
-      display: none;
-    }
-  
-    .nav-open .main-nav-list {
-      flex-direction: column;
-      gap: 4.8rem;
-    }
-  
-  } 
+      z-index: 1000;
+  }
 
+  .icon-mobile-close {
+    display: none;
+  }
+
+  .nav-open .icon-mobile-close {
+    display: block;
+  }
+
+  .nav-open .icon-mobile-menu {
+    display: none;
+  }
+
+  .nav-open .main-nav-list {
+    flex-direction: column;
+    gap: 4.8rem;
+  }
+
+} 
