--- a/client/src/components/Nav/style.css
+++ b/client/src/components/Nav/style.css
@@ -126,6 +126,11 @@ height:7vh;
 width: 5vw;
 filter: drop-shadow(0px 1.5vh 1vh rgb(255, 81, 0));
 cursor: pointer;
+transition: ease-in-out 0.2s;
+}
+
+.buttonCart:hover{
+  transform: scale(1.1);
 }
 
 .cart-closed {
@@ -149,12 +154,12 @@ position: relative;
 
 .close-cart {
 position: absolute;
-top: 10px;
-color: white;
-background-color: black;
+top: 2vh;
+color: rgb(0, 0, 0);
+background-color: rgba(255, 102, 0, 0.705);
 border:  none;
-font-weight: 500;
-right: 180px;
+font-weight: 800;
+right: 7vw;
 cursor: pointer;
 }
 
