--- a/client/src/components/Cart/cart.module.css
+++ b/client/src/components/Cart/cart.module.css
@@ -65,6 +65,18 @@
     transition: ease-in-out 0.2s;
     text-decoration: none;
 }
+.cleanCart{
+    grid-area: productFinal;
+    background-color: rgb(255, 123, 0);
+    color: rgb(255, 255, 255);
+    font-size: 1.2rem;
+    border-radius: 10px;
+    height: 6vh;
+    width: 8vw;
+    border-color: aliceblue;
+    
+}
+
 button{
     text-decoration: none;
 }
