se crea validacion para el password

--- a/client/src/views/RegisterPage/RegisterPage.module.css
+++ b/client/src/views/RegisterPage/RegisterPage.module.css
@@ -1,11 +1,19 @@
 .principalContainer {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   height: 100vh;
   align-items: center;
-  flex-direction: column;
+  justify-items: center;
+
 }
 
+.password{
+
+  font-size: .6vw;
+  color: red;
+  
+}
 
 .registerBtn {
   margin-top: 20px;
