se crea carrousel para renderizar las reviews

--- a/client/src/components/Review/Review.module.css
+++ b/client/src/components/Review/Review.module.css
@@ -12,20 +12,15 @@
     margin: auto;
     position: relative;
 }
-/* .reviewButton{
-    display: flex;
-    flex-direction: row;
-    
-} */
-.reviewContainerButton{
+
+/* .reviewContainerButton{
     display: flex;
     flex-direction: row;
     position: absolute;
     z-index: 10;
     margin-top: -17rem;
-    /* margin-right: 1rem; */
+    margin-right: 1rem;
     margin-left: 1rem;
-    /* background-color: blue; */
     min-width: 95%;
     justify-content: space-between;
     align-items: center;
@@ -33,15 +28,15 @@
 .reviewButton{
     font-size: 3em;
     
-}
+} */
 
 @media (min-width:800px){
     .review-list{
         width: 65%;
         margin: auto;
     }
-    .reviewContainerButton{
+  /*   .reviewContainerButton{
         margin-top: -18rem;
         margin-left: 2rem;
-    }
+    } */
 }
