--- a/client/src/components/ReviewCard/ReviewCard.module.css
+++ b/client/src/components/ReviewCard/ReviewCard.module.css
@@ -23,7 +23,7 @@
 .reviewCardImg{
     height: 7rem;
     width: 7rem;
-    object-fit: cover;
+    object-fit: contain;
     object-position: top;
     clip-path: circle(50%);
     display: block;
@@ -62,8 +62,8 @@
 @media (min-width:800px){
     .reviewCardContainer{
         width: 90vw;
-       /*  min-width: 25rem; */
-        /*max-height: 50vh;*/
+        /* min-width: 25rem;
+        max-height: 50vh; */
         height: 40vh;
         flex-direction: row;
         justify-content: center;
@@ -76,7 +76,7 @@
         height: 12rem;
         width: 12rem;
         clip-path: circle(50%);
-        object-fit: cover;
+        object-fit: contain;
         object-position: top;
         display: block;
         margin: 0 auto;
