trabajando en estilos

--- a/client/src/views/SocioPage/components/CreateReview/CreateReview.module.css
+++ b/client/src/views/SocioPage/components/CreateReview/CreateReview.module.css
@@ -9,7 +9,7 @@
     grid-template-columns: repeat(2, 1fr);
     padding: 1rem;
     font-size: 20px; */
-    
+    z-index:1;
 }
 
 .createReviewTextarea{
