--- a/client/src/views/SocioPage/components/MyActivities/MyActivities.module.css
+++ b/client/src/views/SocioPage/components/MyActivities/MyActivities.module.css
@@ -5,6 +5,7 @@
     align-items: center;
     display: flex;
     flex-direction: column;
+    z-index: 0;
 }
 .userTitleAndAddBtn{
     display: flex;
