--- a/client/src/views/SocioPage/components/CreateReview/CreateReview.module.css
+++ b/client/src/views/SocioPage/components/CreateReview/CreateReview.module.css
@@ -1,20 +1,41 @@
-.CreateReviewContainer{
-    /* background-color: black;
-    color: whitesmoke;
-    width: 50vw;
-    height: 100vh;
-    border: solid 1px whitesmoke;
-    border-radius: 2rem;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+.createReviewContainer{
+    background-color: black;
+    color: rgb(168, 167, 167);
     padding: 1rem;
-    font-size: 20px; */
-    z-index:1;
+    font-size: 20px;
+    z-index: -1;
+}
+.createReviewHeader{
+   /*  width: 40vw; */
+    padding: 0;
+    margin-top: 0;
+    
+}
+.createReviewBoton{
+    border: none;
+    border-radius: 5px;
+    color: white;
+    font-family: sans-serif;
+    padding: 10px;
+    width: auto;
+    font-size: 14px;
+    height: 40px;
+    background-color: #fe4f22;
+    
 }
 
+.createReviewBoton:hover {
+    background-color: #fdede9;
+    transition: all .3s;
+    color: #eb4e27;
+}
+
+.createReviewTitle{
+    color: #eb4e27;
+}
 .createReviewTextarea{
-    width: 90%;
-    height: 80%;
+    /* width: 90%;
+    height: 80%; */
     border-radius: 0.5rem;
     margin: 1rem;
     background-color: rgb(168, 167, 167);
