Validando contraseña, al menos 6caracters, letras y numeros y un caracter especial

--- a/client/src/views/RegisterPage/RegisterPage.module.css
+++ b/client/src/views/RegisterPage/RegisterPage.module.css
@@ -5,16 +5,28 @@
   height: 100vh;
   align-items: center;
   justify-items: center;
-
 }
 
-.password{
-
-  font-size: .6vw;
+.password {
+  font-size: 0.8vw;
+  font-weight: 700;
+  font-family: sans-serif;
   color: red;
-  
 }
 
+.disabledBtn {
+  margin-top: 20px;
+  background-color: white;
+  
+  border: 0.5px solid grey;
+  padding: 10px;
+  width: 180px;
+  margin-bottom: 20px;
+  font-size: 15px;
+  font-weight: 600;
+  border-radius: 5px;
+  font-family: sans-serif;
+}
 .registerBtn {
   margin-top: 20px;
   background-color: white;
