--- a/client/src/views/SocioPage/components/CreateReview/CreateReview.module.css
+++ b/client/src/views/SocioPage/components/CreateReview/CreateReview.module.css
@@ -3,7 +3,6 @@
     color: rgb(168, 167, 167);
     padding: 1rem;
     font-size: 20px;
-    z-index: -1;
 }
 .createReviewHeader{
    /*  width: 40vw; */
@@ -21,7 +20,7 @@
     font-size: 14px;
     height: 40px;
     background-color: #fe4f22;
-    
+    cursor: pointer;
 }
 
 .createReviewBoton:hover {
