actualizo comp. sociopage review y about

--- a/client/src/views/SocioPage/SocioPage.module.css
+++ b/client/src/views/SocioPage/SocioPage.module.css
@@ -22,10 +22,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  width: 100vw; 
 }
-
-
 .principalContainer h2 {
   color: white;
 }
