--- a/client/src/components/AboutHome/AboutHome.module.css
+++ b/client/src/components/AboutHome/AboutHome.module.css
@@ -32,7 +32,7 @@
 }
 .aboutParagraph{
     font-size: 1.2rem;
-    display: block;
+   /*  display: block; */
     font-weight: lighter;
     max-width:90rem;
     margin: auto;
@@ -52,4 +52,9 @@
 .aboutMapIcon{
     color: #eb4e27;
 }
- 
+/* 
+@media(max-width:768px){
+    .flexy{
+        grid-template-columns: 1fr;
+    }
+} */
