--- a/client/src/views/SocioPage/components/CreateReview/CreateReview.module.css
+++ b/client/src/views/SocioPage/components/CreateReview/CreateReview.module.css
@@ -2,7 +2,7 @@
     background-color: black;
     color: rgb(168, 167, 167);
     padding: 1rem;
-    font-size: 20px;
+    font-size: 20px;position: relative;
 }
 .createReviewHeader{
    /*  width: 40vw; */
